--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,8 @@
 [core]
 	editor = emacsclient
 	excludesfile = ~/.gitignore_global
+	autocrlf = false
+	longpaths = true
 
 [merge]
     tool = emacs
